--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -1,15 +1,58 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 
 body {
-    font-family: 'Source Sans 3', sans-serif;
-    background-color: rgb(243, 243, 243);
-    scroll-behavior: smooth;
+  font-family: "Source Sans 3", sans-serif;
+  background-color: rgb(243, 243, 243);
+  scroll-behavior: smooth;
 }
 
 html {
-    scroll-behavior: smooth; /* This makes the entire document smooth-scroll */
+  scroll-behavior: smooth; /* This makes the entire document smooth-scroll */
 }
 
 * {
-    scroll-behavior: smooth; /* Ensures smoother scrolling for all elements */
+  scroll-behavior: smooth; /* Ensures smoother scrolling for all elements */
+}
+
+.datePickerContainer {
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
+  margin-top: "20px";
+}
+
+@media (max-width: 768px) {
+  .chartContainer {
+    flex-direction: column; /* Stack items vertically */
+    align-items: center;
+    /* width: 100%; */
+  }
+
+  .pieChart {
+    width: 100%;
+    height: 300px;
+  }
+  .summary,
+  .districtContainer {
+    width: 90%;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .datePickerContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .fetchButton {
+    margin-top: 10px;
+    width: 100%; /* Full width for better UI on mobile */
+  }
+}
+
+p{
+  font-weight: 500;
 }
