--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -16,6 +16,7 @@ html {
 
 .datePickerContainer {
   display: "flex";
+  /* flex-direction: column; */
   justify-content: "center";
   align-items: "center";
   margin-top: "20px";
@@ -23,9 +24,16 @@ html {
 
 @media (max-width: 768px) {
   .chartContainer {
-    flex-direction: column; /* Stack items vertically */
+    flex-direction: column;
     align-items: center;
     /* width: 100%; */
+  }
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .pieChart {
@@ -43,8 +51,8 @@ html {
   .datePickerContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
+    /* align-items: flex-start; */
+    /* width: 100%; */
   }
 
   .fetchButton {
